[package]
name = "linux-aio-tokio"
version = "0.2.1"
authors = ["Gleb Pomykalov <glebpom@gmail.com>", "Hans-Martin Will <hwill@acm.org>"]
description = "Tokio bindings for Linux kernel AIO"
documentation = "https://docs.rs/linux-aio-tokio/"
repository= "https://github.com/glebpom/linux-aio-tokio"
license = "MIT"
readme = "README.md"
categories = ["api-bindings", "asynchronous", "external-ffi-bindings", "filesystem", "os::unix-apis"]
keywords = ["async", "non-blocking", "futures", "linux", "aio"]
edition = "2018"
build = "build/build.rs"

[dependencies]
tokio = { version = "0.2.18", features = ["io-driver", "sync", "fs"] }
futures = "0.3"
mio = "0.6.21"
libc = "0.2"
parking_lot = "0.10.2"
intrusive-collections = "0.9.0"
lock_api = "0.3.4"
thiserror = "1.0.15"
memmap = "0.7.0"
region = "2.1.2"
async-trait = "0.1.30"
bitflags = "1.2.1"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "rt-core", "rt-threaded", "time"] }
tempfile = "3.1.0"
rand = "0.7"
assert_matches = "1.3.0"

[build-dependencies]
bindgen = "0.53.2"
