[package]
name = "linux-aio-tokio"
version = "0.4.0"
authors = ["Gleb Pomykalov <glebpom@gmail.com>", "Hans-Martin Will <hwill@acm.org>"]
description = "Tokio bindings for Linux kernel AIO"
documentation = "https://docs.rs/linux-aio-tokio/"
repository= "https://github.com/glebpom/linux-aio-tokio"
license = "MIT"
readme = "README.md"
categories = ["api-bindings", "asynchronous", "external-ffi-bindings", "filesystem", "os::unix-apis"]
keywords = ["async", "non-blocking", "futures", "linux", "aio"]
edition = "2018"
build = "build/build.rs"

[dependencies]
tokio = { version = "1.0", features = ["fs", "net"] }
futures = "0.3"
libc = "0.2"
parking_lot = "0.11.1"
intrusive-collections = "0.9.0"
thiserror = "1.0.15"
memmap2 = "0.3.0"
region = "2.2"
async-trait = "0.1.30"
bitflags = "1.2.1"
futures-intrusive = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "time"] }
tempfile = "3.1.0"
rand = "0.8"
assert_matches = "1.3.0"

[build-dependencies]
bindgen = "0.59.1"