[package]
name = "linux-aio-tokio"
version = "0.4.0"
authors = ["Gleb Pomykalov <glebpom@gmail.com>", "Hans-Martin Will <hwill@acm.org>"]
description = "Tokio bindings for Linux kernel AIO"
documentation = "https://docs.rs/linux-aio-tokio/"
repository= "https://github.com/glebpom/linux-aio-tokio"
license = "MIT"
readme = "README.md"
categories = ["api-bindings", "asynchronous", "external-ffi-bindings", "filesystem", "os::unix-apis"]
keywords = ["async", "non-blocking", "futures", "linux", "aio"]
edition = "2024"
build = "build/build.rs"

[dependencies]
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "time", "sync"] }
tokio-stream = "0.1"
libc = "0.2"
parking_lot = "0.12"
intrusive-collections = "0.9.0"
lock_api = "0.4"
thiserror = "2"
memmap2 = "0.9"
region = "3"
bitflags = "2"

[dev-dependencies]
tempfile = "3.1.0"
rand = "0.8"
assert_matches = "1.3.0"

[build-dependencies]
bindgen = "0.72"
